# deskctl

./: Cargo.toml  README.md
pulsectl/: Cargo.toml
pulsectl/src/: lib.rs  types.rs
resources/: default_config.yaml
src/: config.rs  homeassistant.rs  main.rs  pulseaudio.rs  sway.rs
