[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
rumqttc = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
swayipc = "3.0.1"
swayipc-async = "2.0.1"
tokio = {version ="1.31.0", features = ["full"]}
serde_json = "1.0"
gethostname = "0.4.1"
clap = { version = "4.0.29", features = ["derive"] }
serial_test = "0.10.0"
log = "0.4.17"
env_logger = "0.10.0"
ddc = "0.2.2"
ddc-hi = "0.4.1"
serde_yaml = "0.9.25"