[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulsectl = { path = "pulsectl", version = "*" }
futures-util = "0.3.28"
rumqttc = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
swayipc-async = { git = "https://github.com/JayceFayne/swayipc-rs" }
swayipc-types = { git = "https://github.com/JayceFayne/swayipc-rs" }
tokio = { version = "1.31.0", features = ["full"] }
serde_json = "1.0"
gethostname = "0.4.1"
clap = { version = "4.0.29", features = ["derive"] }
serial_test = "0.10.0"
log = "0.4.17"
env_logger = "0.10.0"
ddc = "0.2.2"
ddc-hi = "0.4.1"
serde_yaml = "0.9.25"
anyhow = "1.0.75"
ddc-i2c = { version = "*", features = ["i2c-linux", "with-linux-enumerate"]}
wayland-protocols-wlr = "0.2.0"
smithay-client-toolkit = "0.18.0"
wayland-client = "0.31.1"
