[package]
name = "pulsectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-process = "1.7.0"
tokio-stream = "0.1"
futures-lite = "1.13.0"
async-stream = "0.3.5"
futures-util = "0.3.28"

[dev-dependencies]
serial_test = "0.10.0"
tokio-test = "0.3.0"
